
opam-version: "1.2"
version: "0.1.0"
maintainer: "derutakayu@gmail.com"
authors: "derui"
license: "MIT"
homepage: ""
bug-reports: ""
dev-repo: ""
tags: []
build: [
  "jbuilder" "build" "-p" name "-j" jobs
]
depends: [
  "jbuilder" { >= "1.0+beta16"}
  "ocamlfind"
  "js_of_ocaml" { >= "3.0.2"}
  "js_of_ocaml-ppx" { >= "3.0.2"}
  "mocha_of_ocaml" { "test" }
]
available: [ocaml-version >= "4.05.0"]
