
opam-version: "1.2"
version: "0.1.0"
maintainer: "derutakayu@gmail.com"
authors: "derui"
license: "MIT"
homepage: "https://github.com/derui/jsoo_node"
bug-reports: "https://github.com/derui/jsoo_node/issues"
dev-repo: "https://github.com/derui/jsoo_node"
tags: []
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
test: [
  ["jbuilder" "runt" "-p" name ]
]
depends: [
  "jbuilder" { >= "1.0+beta16"}
  "ocamlfind"
  "js_of_ocaml" { >= "3.0.2"}
  "js_of_ocaml-ppx" { >= "3.0.2"}
  "mocha_of_ocaml" { "test" }
  "lwt" { >= "3.2.0"}
]
available: [ocaml-version >= "4.05.0"]
