
opam-version: "2.0"
version: "0.1.1"
maintainer: "derutakayu@gmail.com"
authors: "derui"
license: "MIT"
homepage: "https://github.com/derui/jsoo_node"
bug-reports: "https://github.com/derui/jsoo_node/issues"
dev-repo: "git+https://github.com/derui/jsoo_node"
tags: []
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "dune" {build & >= "1.0.0"}
  "js_of_ocaml" { >= "3.0.2"}
  "js_of_ocaml-ppx" { >= "3.0.2"}
  "mocha_of_ocaml" { "test" }
  "lwt" { >= "3.2.0"}
]
available: ["ocaml" >= "4.05.0"]
